Updates to the nav

--- a/index.html
+++ b/index.html
@@ -8,21 +8,22 @@
   <link href="../style/styles.css" rel="stylesheet">
   <title>Techqueen Portfolio</title>
 </head>
-<body class="bg-[#f2f2f2] pt-36 lg:pt-40">
-  <header class="navgation fixed top-10 lg:top-6 left-0 right-0 z-50 mx-6 lg:mx-64 h-14 lg:h-16 liquid-glass flex flex-row justify-between items-center rounded-4xl px-6">        
-      <a class="nav-link w-1/5 h-12 flex items-center justify-center bg-[#ffffff] rounded-3xl px-2" href="#home">
+<body class="bg-[#f2f2f2] pt-28 lg:pt-40">
+  <header class="navgation fixed top-4 lg:top-6 left-0 right-0 z-50 mx-4 lg:mx-64 h-14 lg:h-16 liquid-glass flex flex-row justify-between items-center rounded-4xl px-6">        
+      <a class="nav-link w-1/5 lg:h-12 flex items-center justify-center bg-[#ffffff] rounded-3xl px-2 py-0" href="#home">
         <img src="/images/logo design/Favicon_00000.png" alt="">
       </a>   
-      <a class="nav-link w-1/5 h-12 flex items-center justify-center bg-none rounded-3xl px-2 text-[#300865] text-xs lg:text-lg font-semibold lg:font-bold" href="#about">
+      <a class="nav-link w-1/5 lg:h-12 flex items-center justify-center bg-none rounded-3xl px-2 py-3 text-[#300865] text-xs lg:text-lg font-semibold lg:font-bold" href="#about">
         <p>About</p>
       </a>      
-      <a class="nav-link w-1/5 h-12 flex items-center justify-center bg-none rounded-3xl px-2 text-[#300865] text-xs lg:text-lg font-semibold lg:font-bold" href="#projects">
+      <a class="nav-link w-1/5 lg:h-12 flex items-center justify-center bg-none rounded-3xl px-2 py-3 text-[#300865] text-xs lg:text-lg font-semibold lg:font-bold" href="#projects">
         <p>Projects</p>
       </a>    
-      <a class="nav-link w-1/5 h-12 flex items-center justify-center bg-none rounded-3xl px-2 text-[#300865] text-xs lg:text-lg font-semibold lg:font-bold" href="#collabs">
+      <a class="nav-link w-1/5 lg:h-12 flex items-center justify-center bg-none rounded-3xl px-2 py-3 text-[#300865] text-xs lg:text-lg font-semibold lg:font-bold" href="#collabs">
+
         <p>Collabs</p>
       </a>    
-      <a class="nav-link w-1/5 h-12 flex items-center justify-center bg-none rounded-3xl px-2 text-[#300865] text-xs lg:text-lg font-semibold lg:font-bold" href="#contact">
+      <a class="nav-link w-1/5 lg:h-12 flex items-center justify-center bg-none rounded-3xl px-2 py-3 text-[#300865] text-xs lg:text-lg font-semibold lg:font-bold" href="#contact">
         <p>Contact</p>
       </a>
   </header>
