--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="../style/styles.css" rel="stylesheet">
   <title>Techqueen Portfolio</title>
 </head>
-<body class="bg-[#f2f2f2] pt-28 lg:pt-40">
+<body class="bg-[#f2f2f2] font-[rubik] pt-28 lg:pt-40">
   <header class="navgation fixed top-4 lg:top-6 left-0 right-0 z-50 mx-4 lg:mx-64 h-14 lg:h-16 liquid-glass flex flex-row justify-between items-center rounded-4xl px-6">        
       <a class="nav-link w-1/5 lg:h-12 flex items-center justify-center bg-[#ffffff] rounded-3xl px-2 py-0" href="#home">
         <img src="/images/logo design/Favicon_00000.png" alt="">
@@ -28,16 +28,67 @@
       </a>
   </header>
   <section id="home" class="home mx-6 lg:mx-64 flex flex-col gap-4 lg:gap-8 justify-center items-center">
-      <h1 class="text-2xl lg:text-5xl font-[rubik] font-bold text-center">Designer,<br> Project-Manager</h1>
-      <p class="text-lg lg:text-2xl font-[rubik] font-semibold text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel, sit adipisci sapiente voluptates!</p>
+      <h1 class="text-2xl lg:text-5xl font-bold text-center">Designer,<br> Project-Manager</h1>
+      <p class="text-lg lg:text-2xl font-[poppins] font-semibold text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel, sit adipisci sapiente voluptates!</p>
       <div class="user-image mt-8 lg:mt-8 bg-[#552694] w-60 lg:w-72 h-60 lg:h-72 rounded-full"></div>
       <div class="w-full -mt-10 lg:-mt-16">
         <img src="/images/illustrations/3d-nft-icon-digital-artist-male.png" alt="">
       </div>
   </section>
-  <section id="about" class="about h-96 bg-[#552694]">
-     <h2 class="text-2xl font-bold">About Section</h2>
+  <section id="about" class="about mb-6 flex flex-col justify-center items-center gap-4">
+    <div class="flex flex-col bg-[#552694] w-full px-6 pt-10 lg:pt-32 pb-46 lg:pb-60 gap-6">
+      <h1 class="text-lg lg:text-2xl text-[#f2f2f2] font-semibold text-center">Hi, I'm techqueen AKA John Doe. <br> Nice to meet you.</h1>
+      <p class="text-base lg:text-lg text-[#f2f2f2] text-center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui rerum, commodi facilis asperiores aperiam tempora <br class="hidden lg:flex"> tenetur beatae vitae aliquid praesentium cum! Reiciendis, excepturi.<br class="hidden lg:flex"> Distinctio culpa commodi modi officia, tempora corporis!</p>
+    </div>
+    <div class="cards -mt-32 grid grid-rows-2 lg:grid-rows-1 lg:grid-cols-2 px-6 lg:px-14 gap-4">
+      <div class="bg-[#ffffff] flex flex-col justify-center items-center py-6 px-6 rounded-2xl shadow-2xs shadow-gray-400">
+        <iconify-icon icon="streamline-cyber:design-mug" class="text-purple-950 text-5xl bg-purple-100 rounded-full p-4"></iconify-icon>
+        <h1 class="mt-6 text-xl font-bold">Designer</h1>
+        <p class="mt-8 text-lg text-center font-[poppins]">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa esse minus doloribus?</p>
+        <p class="mt-14 text-lg text-[#552694] text-center font-[poppins]">Things I enjoy designing:</p>
+        <p class="mt-2 text-lg text-center font-[poppins]">UI, Logos, Flyers, Instagram posts</p>
+        <p class="mt-14 text-lg text-[#552694] text-center font-[poppins]">Design tools:</p>
+        <p class="mt-2 text-lg text-center font-[poppins]">Figma <br>Photoshop <br>Canva <br>Pen and Paper <br>Sketch</p>
+      </div>
+      <div class="bg-[#ffffff] flex flex-col justify-center items-center py-6 px-6 rounded-2xl shadow-2xs shadow-gray-400">
+        <iconify-icon icon="mdi:briefcase-account-outline" class="text-purple-950 text-5xl bg-purple-100 rounded-full p-4"></iconify-icon>
+        <h1 class="mt-6 text-xl font-bold">Project Manager</h1>
+        <p class="mt-8 text-lg text-center font-[poppins]">Experienced in leading cross-functional teams to deliver successful projects on time and within budget.</p>
+        <p class="mt-14 text-lg text-[#552694] text-center font-[poppins]">What I manage:</p>
+        <p class="mt-2 text-lg text-center font-[poppins]">Timelines, Team Collaboration, Client Communication</p>
+        <p class="mt-14 text-lg text-[#552694] text-center font-[poppins]">Management tools:</p>
+        <p class="mt-2 text-lg text-center font-[poppins]">Trello <br>Jira <br>Asana <br>Slack <br>Notion</p>
+      </div>
+    </div>
   </section>
-<script src="/scripts/index.js"></script>
+
+  <footer class="flex flex-col justify-center items-center bg-[#552694] w-full px-6 pt-60 pb-20">
+    <img class="w-32 h-32" src="/images/logo design/logomark_00000.png" alt="">
+    <p class="text-lg text-[#f2f2f2] text-center font-[poppins]">Designing with Vision, Leading with Purpose.</p>
+    <div class="mt-10 socials flex gap-3">
+      <a href="#">
+        <iconify-icon icon="mdi:linkedin" class="text-[#f2f2f2] text-xl border border-[#f2f2f2] rounded-full p-2"></iconify-icon>
+      </a>
+      <a href="#">
+        <iconify-icon icon="mdi:twitter" class="text-[#f2f2f2] text-xl border border-[#f2f2f2] rounded-full p-2"></iconify-icon>
+      </a>
+      <a href="#">
+        <iconify-icon icon="mdi:github" class="text-[#f2f2f2] text-xl border border-[#f2f2f2] rounded-full p-2"></iconify-icon>
+      </a>
+      <a href="#">
+        <iconify-icon icon="mdi:instagram" class="text-[#f2f2f2] text-xl border border-[#f2f2f2] rounded-full p-2"></iconify-icon>
+      </a>
+      <a href="#">
+        <iconify-icon icon="mdi:behance" class="text-[#f2f2f2] text-xl border border-[#f2f2f2] rounded-full p-2"></iconify-icon>
+      </a>
+      <a href="#">
+        <iconify-icon icon="mdi:gmail" class="text-[#f2f2f2] text-xl border border-[#f2f2f2] rounded-full p-2"></iconify-icon>
+      </a>
+    </div>
+    <p class="mt-10 text-[#f2f2f2] text-center font-[poppins]">Hand-coded by <a href="https://github.com/OkataMiracleDev">Okata Miracle</a></p>
+    <p class="mt-6 text-[#f2f2f2] text-center font-[poppins]">© 2023 Techqueen. All rights reserved.</p>
+  </footer>
+  <script src="https://code.iconify.design/iconify-icon/1.0.8/iconify-icon.min.js"></script>
+  <script src="/scripts/index.js"></script>
 </body>
 </html>
