Large screen responsivness fix

--- a/index.html
+++ b/index.html
@@ -63,30 +63,30 @@
   </section>
 
   <footer class="flex flex-col justify-center items-center bg-[#552694] w-full px-6 pt-60 pb-20">
-    <img class="w-32 h-32" src="/images/logo design/logomark_00000.png" alt="">
-    <p class="text-lg text-[#f2f2f2] text-center font-[poppins]">Designing with Vision, Leading with Purpose.</p>
-    <div class="mt-10 socials flex gap-3">
+    <img class="w-32 lg:w-64 h-32 lg:h-64" src="/images/logo design/logomark_00000.png" alt="">
+    <p class="text-lg lg:text-xl text-[#f2f2f2] text-center font-[poppins]">Designing with Vision, Leading with Purpose.</p>
+    <div class="mt-10 socials flex gap-3 lg:gap-6">
       <a href="#">
-        <iconify-icon icon="mdi:linkedin" class="text-[#f2f2f2] text-xl border border-[#f2f2f2] rounded-full p-2"></iconify-icon>
+        <iconify-icon icon="mdi:linkedin" class="text-[#f2f2f2] text-3xl border border-[#f2f2f2] rounded-full p-2"></iconify-icon>
       </a>
       <a href="#">
-        <iconify-icon icon="mdi:twitter" class="text-[#f2f2f2] text-xl border border-[#f2f2f2] rounded-full p-2"></iconify-icon>
+        <iconify-icon icon="mdi:twitter" class="text-[#f2f2f2] text-3xl border border-[#f2f2f2] rounded-full p-2"></iconify-icon>
       </a>
       <a href="#">
-        <iconify-icon icon="mdi:github" class="text-[#f2f2f2] text-xl border border-[#f2f2f2] rounded-full p-2"></iconify-icon>
+        <iconify-icon icon="mdi:github" class="text-[#f2f2f2] text-3xl border border-[#f2f2f2] rounded-full p-2"></iconify-icon>
       </a>
       <a href="#">
-        <iconify-icon icon="mdi:instagram" class="text-[#f2f2f2] text-xl border border-[#f2f2f2] rounded-full p-2"></iconify-icon>
+        <iconify-icon icon="mdi:instagram" class="text-[#f2f2f2] text-3xl border border-[#f2f2f2] rounded-full p-2"></iconify-icon>
       </a>
       <a href="#">
-        <iconify-icon icon="mdi:behance" class="text-[#f2f2f2] text-xl border border-[#f2f2f2] rounded-full p-2"></iconify-icon>
+        <iconify-icon icon="mdi:behance" class="text-[#f2f2f2] text-3xl border border-[#f2f2f2] rounded-full p-2"></iconify-icon>
       </a>
       <a href="#">
-        <iconify-icon icon="mdi:gmail" class="text-[#f2f2f2] text-xl border border-[#f2f2f2] rounded-full p-2"></iconify-icon>
+        <iconify-icon icon="mdi:gmail" class="text-[#f2f2f2] text-3xl border border-[#f2f2f2] rounded-full p-2"></iconify-icon>
       </a>
     </div>
-    <p class="mt-10 text-[#f2f2f2] text-center font-[poppins]">Hand-coded by <a href="https://github.com/OkataMiracleDev">Okata Miracle</a></p>
-    <p class="mt-6 text-[#f2f2f2] text-center font-[poppins]">© 2023 Techqueen. All rights reserved.</p>
+    <p class="mt-10 lg:text-lg text-[#f2f2f2] text-center font-[poppins]">Hand-coded by <a href="https://github.com/OkataMiracleDev">Okata Miracle</a></p>
+    <p class="mt-6 lg:text-lg text-[#f2f2f2] text-center font-[poppins]">© 2023 Techqueen. All rights reserved.</p>
   </footer>
   <script src="https://code.iconify.design/iconify-icon/1.0.8/iconify-icon.min.js"></script>
   <script src="/scripts/index.js"></script>
