--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
   <section id="home" class="home mx-6 lg:mx-64 flex flex-col gap-4 lg:gap-8 justify-center items-center">
       <h1 class="text-2xl lg:text-5xl font-bold text-center">Designer,<br> Project-Manager</h1>
       <p class="text-lg lg:text-2xl font-[poppins] font-semibold text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel, sit adipisci sapiente voluptates!</p>
-      <div class="user-image mt-8 lg:mt-8 h-60 lg:h-72 flex flex-col items-center">
-        <div class=" bg-[#552694]  w-60 lg:w-72 h-60 lg:h-72 rounded-full"></div>
+      <div class="user-image mt-8 lg:mt-8 h-60 lg:h-72 flex flex-col items-center">        
         <img src="/images/illustrations/avatar_00000.png" class="absolute z-10 pb-4 lg:pb-6 w-64 lg:w-80 h-64 lg:h-80" alt="avatar">
       </div>
       <div class="w-full -mt-10 lg:-mt-16 z-20">
@@ -67,62 +66,148 @@
       </div>
     </div>
   </section>
-  <section id="projects" class="bg-gradient-to-tr from-violet-200 via-violet-600 to-pink-200 rounded-3xl projects mt-10  flex flex-col gap-4 lg:gap-8 justify-center items-center pt-10 pb-14">
+  <section id="projects" class="bg-gradient-to-tr from-violet-400 via-violet-500 to-pink-200 rounded-3xl projects mt-10 mx-1 lg:mx-3 flex flex-col gap-8 justify-center items-center pt-10 pb-14">
     <h1 class="text-2xl lg:text-4xl font-bold mx-6 lg:mx-64">My Recent Work</h1>
-    <p class="text-center lg:text-xl font-[poppins] mx-6 lg:mx-64">Here are a few past projects I've worked on. Want to see more? <a href="#" class="text-blue-600">Email me.</a></p>
-    <div class="skill-selector flex flex-row justify-center w-full gap-4 hover:gap-2 lg:px-10">
+    <p class="text-center lg:text-xl text-1 font-[poppins] mx-6 lg:mx-64">Here are a few past projects I've worked on. Want to see more? <a href="#" class="text-blue-600">Email me.</a></p>
+    <div class="mt-8 skill-selector-pc hidden lg:flex flex-row justify-center w-full gap-2 lg:px-10">
       
       <!-- Graphic Design Card -->
-      <a href="pages/graphic-design.html" class="group graphic-design liquid-glass-2 py-6 flex flex-col justify-center items-center rounded-2xl w-1/4 lg:w-2/5 lg:hover:w-2/3 hover:w-2/3 transition-all duration-500 ease-in-out">
+      <a href="pages/graphic-design.html" style="grid-template-rows: 0.2fr 0.8fr;" class="group graphic-design liquid-glass-2 py-6 grid grid-rows-2 rounded-2xl lg:w-2/5 lg:hover:w-2/3 gap-10 transition-all duration-500 ease-in-out min-h-[16rem] shadow-2xs shadow-gray-500">
+        <div class="w-full flex justify-center h-1/4">
+          <iconify-icon icon="streamline-cyber:design-mug" class="text-purple-950 text-xl bg-purple-100 rounded-2xl w-fit h-fit p-4"></iconify-icon>
+        </div>
+        <div class="flex items-center justify-center h-full">
+          <h1 class="text-xl text-center font-semibold leading-none uppercase transition-all duration-500 ease-in-out">
+            <span class="inline-block transition-all duration-500">G</span>
+            <span class="inline-block transition-all duration-500">r</span>
+            <span class="inline-block transition-all duration-500">a</span>
+            <span class="inline-block transition-all duration-500">p</span>
+            <span class="inline-block transition-all duration-500">h</span>
+            <span class="inline-block transition-all duration-500">i</span>
+            <span class="inline-block transition-all duration-500">c</span>
+            <br>
+            <span class="inline-block transition-all duration-500">D</span>
+            <span class="inline-block transition-all duration-500">e</span>
+            <span class="inline-block transition-all duration-500">s</span>
+            <span class="inline-block transition-all duration-500">i</span>
+            <span class="inline-block transition-all duration-500">g</span>
+            <span class="inline-block transition-all duration-500">n</span>
+          </h1>
+        </div>
+      </a>
 
-        <iconify-icon icon="streamline-cyber:design-mug" class="text-purple-950 text-xl bg-purple-100 rounded-2xl p-4 mb-10"></iconify-icon>
-        <h1 class="text-xl text-center font-semibold leading-none uppercase transition-all duration-500 ease-in-out">
-          <span class="block group-hover:inline-block transition-all duration-500">G</span>
-          <span class="block group-hover:inline-block transition-all duration-500">r</span>
-          <span class="block group-hover:inline-block transition-all duration-500">a</span>
-          <span class="block group-hover:inline-block transition-all duration-500">p</span>
-          <span class="block group-hover:inline-block transition-all duration-500">h</span>
-          <span class="block group-hover:inline-block transition-all duration-500">i</span>
-          <span class="block group-hover:inline-block transition-all duration-500">c</span>
-          <br>
-          <span class="block group-hover:inline-block transition-all duration-500">D</span>
-          <span class="block group-hover:inline-block transition-all duration-500">e</span>
-          <span class="block group-hover:inline-block transition-all duration-500">s</span>
-          <span class="block group-hover:inline-block transition-all duration-500">i</span>
-          <span class="block group-hover:inline-block transition-all duration-500">g</span>
-          <span class="block group-hover:inline-block transition-all duration-500">n</span>
+      <!-- Project Management Card -->
+      <a href="pages/project-management.html" style="grid-template-rows: 0.2fr 0.8fr;" class="group project-management liquid-glass-2 py-6 grid grid-rows-2 rounded-2xl lg:w-2/5 lg:hover:w-2/3 gap-10 transition-all duration-500 ease-in-out min-h-[16rem] shadow-2xs shadow-gray-500">
+        <div class="w-full flex justify-center h-1/4">
+          <iconify-icon icon="mdi:briefcase-account-outline" class="text-purple-950 text-xl bg-purple-100 rounded-2xl w-fit h-fit p-4"></iconify-icon>
+        </div>
+        <div class="flex items-center justify-center h-full">
+          <h1 class="text-xl text-center font-semibold leading-none uppercase transition-all duration-500 ease-in-out">
+            <span class="inline-block transition-all duration-500">P</span>
+            <span class="inline-block transition-all duration-500">r</span>
+            <span class="inline-block transition-all duration-500">o</span>
+            <span class="inline-block transition-all duration-500">j</span>
+            <span class="inline-block transition-all duration-500">e</span>
+            <span class="inline-block transition-all duration-500">c</span>
+            <span class="inline-block transition-all duration-500">t</span>
+            <br>
+            <span class="inline-block transition-all duration-500">M</span>
+            <span class="inline-block transition-all duration-500">a</span>
+            <span class="inline-block transition-all duration-500">n</span>
+            <span class="inline-block transition-all duration-500">a</span>
+            <span class="inline-block transition-all duration-500">g</span>
+            <span class="inline-block transition-all duration-500">e</span>
+            <span class="inline-block transition-all duration-500">m</span>
+            <span class="inline-block transition-all duration-500">e</span>
+            <span class="inline-block transition-all duration-500">n</span>
+            <span class="inline-block transition-all duration-500">t</span>
+          </h1>
+        </div>
+      </a>
+    </div>
+    <div class="skill-selector-mobile px-2 flex lg:hidden flex-row justify-center w-full gap-2">
+      
+      <!-- Graphic Design Card -->
+      <a href="pages/graphic-design.html" class="group graphic-design liquid-glass-2 py-6 grid grid-rows-2 justify-center items-center rounded-2xl w-1/2 gap-10 shadow-2xs shadow-gray-400">
+        <div class="w-full flex justify-center items-center">
+          <iconify-icon icon="streamline-cyber:design-mug" class="text-purple-950 text-xl bg-purple-100 rounded-2xl w-fit p-4"></iconify-icon>
+        </div>
+        <h1 class="text-lg text-center font-semibold leading-none uppercase pb-8">
+          <span class="inline-block">G</span>
+          <span class="inline-block">r</span>
+          <span class="inline-block">a</span>
+          <span class="inline-block">p</span>
+          <span class="inline-block">h</span>
+          <span class="inline-block">i</span>
+          <span class="inline-block">c</span>
+          <br class="mt-2">
+          <span class="inline-block">D</span>
+          <span class="inline-block">e</span>
+          <span class="inline-block">s</span>
+          <span class="inline-block">i</span>
+          <span class="inline-block">g</span>
+          <span class="inline-block">n</span>
         </h1>
       </a>
 
       <!-- Project Management Card -->
-      <a href="pages/project-management.html" class="group graphic-design liquid-glass-2 py-6 flex flex-col justify-center items-center rounded-2xl w-1/4 lg:w-2/5 lg:hover:w-2/3 hover:w-2/3 transition-all duration-500 ease-in-out">
-        <iconify-icon icon="mdi:briefcase-account-outline" class="text-purple-950 text-xl bg-purple-100 rounded-2xl p-4 mb-10"></iconify-icon>
-        <h1 class="text-xl text-center font-semibold leading-none uppercase transition-all duration-500 ease-in-out">
-          <span class="block group-hover:inline-block transition-all duration-500">P</span>
-          <span class="block group-hover:inline-block transition-all duration-500">r</span>
-          <span class="block group-hover:inline-block transition-all duration-500">o</span>
-          <span class="block group-hover:inline-block transition-all duration-500">j</span>
-          <span class="block group-hover:inline-block transition-all duration-500">e</span>
-          <span class="block group-hover:inline-block transition-all duration-500">c</span>
-          <span class="block group-hover:inline-block transition-all duration-500">t</span>
-          <br>
-          <span class="block group-hover:inline-block transition-all duration-500">M</span>
-          <span class="block group-hover:inline-block transition-all duration-500">a</span>
-          <span class="block group-hover:inline-block transition-all duration-500">n</span>
-          <span class="block group-hover:inline-block transition-all duration-500">a</span>
-          <span class="block group-hover:inline-block transition-all duration-500">g</span>
-          <span class="block group-hover:inline-block transition-all duration-500">e</span>
-          <span class="block group-hover:inline-block transition-all duration-500">m</span>
-          <span class="block group-hover:inline-block transition-all duration-500">e</span>
-          <span class="block group-hover:inline-block transition-all duration-500">n</span>
-          <span class="block group-hover:inline-block transition-all duration-500">t</span>
+      <a href="pages/project-management.html" class="group graphic-design liquid-glass-2 py-6 grid grid-rows-2 justify-center items-center rounded-2xl w-1/2 gap-10 shadow-2xs shadow-gray-400">
+        <div class="w-full flex justify-center items-center">
+          <iconify-icon icon="streamline-cyber:design-mug" class="text-purple-950 text-xl bg-purple-100 rounded-2xl w-fit p-4"></iconify-icon>
+        </div>
+        <h1 class="text-lg text-center font-semibold leading-none uppercase pb-8">
+
+          <span class="inline-block">P</span>
+          <span class="inline-block">r</span>
+          <span class="inline-block">o</span>
+          <span class="inline-block">j</span>
+          <span class="inline-block">e</span>
+          <span class="inline-block">c</span>
+          <span class="inline-block">t</span>
+          <br class="mt-2">
+          <span class="inline-block">m</span>
+          <span class="inline-block">a</span>
+          <span class="inline-block">n</span>
+          <span class="inline-block">a</span>
+          <span class="inline-block">g</span>
+          <span class="inline-block">e</span>
+          <span class="inline-block">m</span>
+          <span class="inline-block">e</span>
+          <span class="inline-block">n</span>
+          <span class="inline-block">t</span>
         </h1>
       </a>
     </div>
   </section>
-  <section class="mt-4 lg:mt-8 flex flex-row justify-center items-center border-2 border-[#300865] hover:bg-[#300865] text-[#300865] hover:text-white transition-all duration-500 rounded-3xl mx-14 lg:mx-96 px-4 py-2 gap-2">
-    <iconify-icon icon="mdi:behance" class="text-3xl"></iconify-icon>
-    <a href="#" target="_blank" class="">See more on Behance</a>
+  
+  <section class="collaborations mt-6 lg:mt-24 flex flex-col">
+    <h1 class="mx-3 lg:mx-56 mb-8 lg:mb-12 text-2xl lg:text-3xl font-semibold lg:font-bold text-center">I'm proud to have collaborated with some awesome companies:</h1>
+    <div id="collabs" class="collaborations-grid grid grid-cols-2 lg:grid-cols-4 grid-rows-4 lg:grid-rows-2 mx-6 lg:mx-14 gap-4">
+      <div class="collaborations">
+        <img src="/images/illustrations/collaboration_00000.jpg" alt="">
+      </div>
+      <div class="collaborations">
+        <img src="/images/illustrations/collaboration_00000.jpg" alt="">
+      </div>
+      <div class="collaborations">
+        <img src="/images/illustrations/collaboration_00000.jpg" alt="">
+      </div>
+      <div class="collaborations">
+        <img src="/images/illustrations/collaboration_00000.jpg" alt="">
+      </div>
+      <div class="collaborations">
+        <img src="/images/illustrations/collaboration_00000.jpg" alt="">
+      </div>
+      <div class="collaborations">
+        <img src="/images/illustrations/collaboration_00000.jpg" alt="">
+      </div>
+      <div class="collaborations">
+        <img src="/images/illustrations/collaboration_00000.jpg" alt="">
+      </div>
+      <div class="collaborations">
+        <img src="/images/illustrations/collaboration_00000.jpg" alt="">
+      </div>
+    </div>
   </section>
   <footer class="mt-6 flex flex-col justify-center items-center bg-[#552694] w-full px-6 pt-60 pb-20">
     <img class="w-32 lg:w-64 h-32 lg:h-64" src="/images/logo design/logomark_00000.png" alt="">
