--- a/pages/graphic-design.html
+++ b/pages/graphic-design.html
@@ -6,7 +6,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="../style/styles.css" rel="stylesheet">
-  <title>Techqueen Portfolio</title>
+  <title>Techqueen Design Portfolio</title>
 </head>
 <body class="bg-[#f2f2f2] font-[rubik] pt-28 lg:pt-40">
   <header class="navgation fixed top-4 lg:top-6 left-0 right-0 z-50 mx-20 lg:mx-64 h-14 lg:h-16 liquid-glass flex flex-row justify-center items-center rounded-4xl px-6">        
@@ -17,6 +17,12 @@
         <div class="w-full h-8 bg-cover  lg:bg-contain bg-center bg-no-repeat" style="background-size: 6rem; background-image: url('../images/logo\ design/Favicon_00000.png');"></div>
       </a>   
   </header>
+
+
+  <section class="mt-4 lg:mt-8 flex flex-row justify-center items-center border-2 border-[#300865] hover:bg-[#300865] text-[#300865] hover:text-white transition-all duration-500 rounded-3xl mx-14 lg:mx-96 px-4 py-2 gap-2">
+    <iconify-icon icon="mdi:behance" class="text-3xl"></iconify-icon>
+    <a href="#" target="_blank" class="">See more on Behance</a>
+  </section>
   <footer class="mt-6 flex flex-col justify-center items-center bg-[#552694] w-full px-6 pt-60 pb-20">
     <img class="w-32 lg:w-64 h-32 lg:h-64" src="/images/logo design/logomark_00000.png" alt="">
     <p class="text-lg lg:text-xl text-[#f2f2f2] text-center font-[poppins]">Designing with Vision, Leading with Purpose.</p>
