--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="scroll-behavior: smooth;" lang="en">
+<html style="scroll-behavior: smooth; scroll-padding-top: 120px;" lang="en">
 <head>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -9,24 +9,24 @@
   <title>Techqueen Portfolio</title>
 </head>
 <body class="bg-[#f2f2f2] font-[rubik] pt-28 lg:pt-40">
-  <header class="navgation fixed top-4 lg:top-6 left-0 right-0 z-50 mx-4 lg:mx-64 h-14 lg:h-16 liquid-glass flex flex-row justify-between items-center rounded-4xl px-6">        
+  <header class="navigation fixed top-4 lg:top-6 left-0 right-0 z-50 mx-4 lg:mx-64 h-14 lg:h-16 liquid-glass shadow-xs shadow-gray-300 flex flex-row justify-between items-center rounded-4xl px-6">        
       <a class="nav-link w-1/5 lg:h-12 flex lg:hidden items-center justify-center bg-[#ffffff] rounded-3xl px-2 py-0" href="#home">
         <img src="/images/logo design/Favicon_00000.png" alt="">
       </a>   
       <a class="nav-link w-1/5 lg:h-12 lg:flex hidden items-center justify-center bg-[#ffffff] rounded-3xl px-2 py-0" href="#home">
         <div class="w-full h-8 bg-cover lg:bg-contain bg-center bg-no-repeat" style="background-size: 6rem; background-image: url('/images/logo\ design/Favicon_00000.png');"></div>
       </a>   
-      <a class="nav-link w-1/5 lg:h-12 flex items-center justify-center bg-none rounded-3xl px-2 py-3 text-[#300865] text-xs lg:text-lg font-semibold lg:font-bold" href="#about">
+      <a class="nav-link w-1/5 lg:h-12 flex items-center justify-center bg-none rounded-3xl px-2 py-3 text-[#082c65] text-xs lg:text-lg font-semibold lg:font-bold" href="#about">
         <p>About</p>
       </a>      
-      <a class="nav-link w-1/5 lg:h-12 flex items-center justify-center bg-none rounded-3xl px-2 py-3 text-[#300865] text-xs lg:text-lg font-semibold lg:font-bold" href="#projects">
+      <a class="nav-link w-1/5 lg:h-12 flex items-center justify-center bg-none rounded-3xl px-2 py-3 text-[#082c65] text-xs lg:text-lg font-semibold lg:font-bold" href="#projects">
         <p>Projects</p>
       </a>    
-      <a class="nav-link w-1/5 lg:h-12 flex items-center justify-center bg-none rounded-3xl px-2 py-3 text-[#300865] text-xs lg:text-lg font-semibold lg:font-bold" href="#collabs">
+      <a class="nav-link w-1/5 lg:h-12 flex items-center justify-center bg-none rounded-3xl px-2 py-3 text-[#082c65] text-xs lg:text-lg font-semibold lg:font-bold" href="#collabs">
 
         <p>Collabs</p>
       </a>    
-      <a class="nav-link w-1/5 lg:h-12 flex items-center justify-center bg-none rounded-3xl px-2 py-3 text-[#300865] text-xs lg:text-lg font-semibold lg:font-bold" href="#contact">
+      <a class="nav-link w-1/5 lg:h-12 flex items-center justify-center bg-none rounded-3xl px-2 py-3 text-[#082c65] text-xs lg:text-lg font-semibold lg:font-bold" href="#contact">
         <p>Contact</p>
       </a>
   </header>
@@ -37,36 +37,37 @@
         <img src="/images/illustrations/avatar_00000.png" class="absolute z-10 pb-4 lg:pb-6 w-64 lg:w-80 h-64 lg:h-80" alt="avatar">
       </div>
       <div class="w-full -mt-10 lg:-mt-16 z-20">
-        <img src="/images/illustrations/3d-nft-icon-digital-artist-male.png" alt="">
+        <img src="/images/illustrations/illustration_00000.png" alt="">
       </div>
   </section>
   <section id="about" class="about flex flex-col justify-center items-center gap-4">
-    <div class="flex flex-col bg-[#552694] w-full px-6 pt-10 lg:pt-32 pb-46 lg:pb-60 gap-6">
+    <div class="flex flex-col bg-[#267194] w-full px-6 pt-10 lg:pt-32 pb-46 lg:pb-60 gap-6">
       <h1 class="text-lg lg:text-2xl text-[#f2f2f2] font-semibold text-center">Hi, I'm techqueen AKA John Doe. <br> Nice to meet you.</h1>
       <p class="text-base lg:text-lg text-[#f2f2f2] text-center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui rerum, commodi facilis asperiores aperiam tempora <br class="hidden lg:flex"> tenetur beatae vitae aliquid praesentium cum! Reiciendis, excepturi.<br class="hidden lg:flex"> Distinctio culpa commodi modi officia, tempora corporis!</p>
     </div>
     <div class="cards -mt-32 grid grid-rows-2 lg:grid-rows-1 lg:grid-cols-2 px-6 lg:px-14 gap-4">
       <div class="bg-[#ffffff] flex flex-col justify-center items-center py-6 px-6 rounded-2xl shadow-2xs shadow-gray-400">
-        <iconify-icon icon="streamline-cyber:design-mug" class="text-purple-950 text-5xl bg-purple-100 rounded-full p-4"></iconify-icon>
+        <iconify-icon icon="streamline-cyber:design-mug" class="text-blue-950 text-5xl bg-blue-100 rounded-full p-4"></iconify-icon>
         <h1 class="mt-6 text-xl font-bold">Designer</h1>
         <p class="mt-8 text-lg text-center font-[poppins]">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa esse minus doloribus?</p>
-        <p class="mt-14 text-lg text-[#552694] text-center font-[poppins]">Things I enjoy designing:</p>
+        <p class="mt-14 text-lg text-[#267194] text-center font-[poppins]">Things I enjoy designing:</p>
         <p class="mt-2 text-lg text-center font-[poppins]">UI, Logos, Flyers, Instagram posts</p>
-        <p class="mt-14 text-lg text-[#552694] text-center font-[poppins]">Design tools:</p>
+        <p class="mt-14 text-lg text-[#267194] text-center font-[poppins]">Design tools:</p>
         <p class="mt-2 text-lg text-center font-[poppins]">Figma <br>Photoshop <br>Canva <br>Pen and Paper <br>Sketch</p>
       </div>
       <div class="bg-[#ffffff] flex flex-col justify-center items-center py-6 px-6 rounded-2xl shadow-2xs shadow-gray-400">
-        <iconify-icon icon="mdi:briefcase-account-outline" class="text-purple-950 text-5xl bg-purple-100 rounded-full p-4"></iconify-icon>
+        <iconify-icon icon="mdi:briefcase-account-outline" class="text-blue-950 text-5xl bg-blue-100 rounded-full p-4"></iconify-icon>
         <h1 class="mt-6 text-xl font-bold">Project Manager</h1>
         <p class="mt-8 text-lg text-center font-[poppins]">Experienced in leading cross-functional teams to deliver successful projects on time and within budget.</p>
-        <p class="mt-14 text-lg text-[#552694] text-center font-[poppins]">What I manage:</p>
+        <p class="mt-14 text-lg text-[#267194] text-center font-[poppins]">What I manage:</p>
         <p class="mt-2 text-lg text-center font-[poppins]">Timelines, Team Collaboration, Client Communication</p>
-        <p class="mt-14 text-lg text-[#552694] text-center font-[poppins]">Management tools:</p>
+        <p class="mt-14 text-lg text-[#267194] text-center font-[poppins]">Management tools:</p>
         <p class="mt-2 text-lg text-center font-[poppins]">Trello <br>Jira <br>Asana <br>Slack <br>Notion</p>
       </div>
     </div>
   </section>
-  <section id="projects" class="bg-gradient-to-tr from-violet-400 via-violet-500 to-pink-200 rounded-3xl projects mt-10 mx-1 lg:mx-3 flex flex-col gap-8 justify-center items-center pt-10 pb-14">
+  <section id="projects" class="bg-gradient-to-tr from-cyan-400 via-cyan-500 to-teal-200 rounded-3xl projects mt-10 mx-1 lg:mx-3 flex flex-col gap-8 justify-center items-center pt-10 pb-14">
+
     <h1 class="text-2xl lg:text-4xl font-bold mx-6 lg:mx-64">My Recent Work</h1>
     <p class="text-center lg:text-xl text-1 font-[poppins] mx-6 lg:mx-64">Here are a few past projects I've worked on. Want to see more? <a href="#" class="text-blue-600">Email me.</a></p>
     <div class="mt-8 skill-selector-pc hidden lg:flex flex-row justify-center w-full gap-2 lg:px-10">
@@ -74,7 +75,7 @@
       <!-- Graphic Design Card -->
       <a href="pages/graphic-design.html" style="grid-template-rows: 0.2fr 0.8fr;" class="group graphic-design liquid-glass-2 py-6 grid grid-rows-2 rounded-2xl lg:w-2/5 lg:hover:w-2/3 gap-10 transition-all duration-500 ease-in-out min-h-[16rem] shadow-2xs shadow-gray-500">
         <div class="w-full flex justify-center h-1/4">
-          <iconify-icon icon="streamline-cyber:design-mug" class="text-purple-950 text-xl bg-purple-100 rounded-2xl w-fit h-fit p-4"></iconify-icon>
+          <iconify-icon icon="streamline-cyber:design-mug" class="text-blue-950 text-xl bg-blue-200 rounded-2xl w-fit h-fit p-4"></iconify-icon>
         </div>
         <div class="flex items-center justify-center h-full">
           <h1 class="text-xl text-center font-semibold leading-none uppercase transition-all duration-500 ease-in-out">
@@ -99,7 +100,7 @@
       <!-- Project Management Card -->
       <a href="pages/project-management.html" style="grid-template-rows: 0.2fr 0.8fr;" class="group project-management liquid-glass-2 py-6 grid grid-rows-2 rounded-2xl lg:w-2/5 lg:hover:w-2/3 gap-10 transition-all duration-500 ease-in-out min-h-[16rem] shadow-2xs shadow-gray-500">
         <div class="w-full flex justify-center h-1/4">
-          <iconify-icon icon="mdi:briefcase-account-outline" class="text-purple-950 text-xl bg-purple-100 rounded-2xl w-fit h-fit p-4"></iconify-icon>
+          <iconify-icon icon="mdi:briefcase-account-outline" class="text-blue-950 text-xl bg-blue-200 rounded-2xl w-fit h-fit p-4"></iconify-icon>
         </div>
         <div class="flex items-center justify-center h-full">
           <h1 class="text-xl text-center font-semibold leading-none uppercase transition-all duration-500 ease-in-out">
@@ -128,9 +129,9 @@
     <div class="skill-selector-mobile px-2 flex lg:hidden flex-row justify-center w-full gap-2">
       
       <!-- Graphic Design Card -->
-      <a href="pages/graphic-design.html" class="group graphic-design liquid-glass-2 py-6 grid grid-rows-2 justify-center items-center rounded-2xl w-1/2 gap-10 shadow-2xs shadow-gray-400">
+      <a href="pages/graphic-design.html" class="group graphic-design liquid-glass-2 py-6 grid grid-rows-2 justify-center items-center rounded-2xl w-1/2 gap-10 shadow-2xs shadow-gray-500">
         <div class="w-full flex justify-center items-center">
-          <iconify-icon icon="streamline-cyber:design-mug" class="text-purple-950 text-xl bg-purple-100 rounded-2xl w-fit p-4"></iconify-icon>
+          <iconify-icon icon="streamline-cyber:design-mug" class="text-blue-950 text-xl bg-blue-200 rounded-2xl w-fit p-4"></iconify-icon>
         </div>
         <h1 class="text-lg text-center font-semibold leading-none uppercase pb-8">
           <span class="inline-block">G</span>
@@ -151,9 +152,9 @@
       </a>
 
       <!-- Project Management Card -->
-      <a href="pages/project-management.html" class="group graphic-design liquid-glass-2 py-6 grid grid-rows-2 justify-center items-center rounded-2xl w-1/2 gap-10 shadow-2xs shadow-gray-400">
+      <a href="pages/project-management.html" class="group graphic-design liquid-glass-2 py-6 grid grid-rows-2 justify-center items-center rounded-2xl w-1/2 gap-10 shadow-2xs shadow-gray-500">
         <div class="w-full flex justify-center items-center">
-          <iconify-icon icon="streamline-cyber:design-mug" class="text-purple-950 text-xl bg-purple-100 rounded-2xl w-fit p-4"></iconify-icon>
+          <iconify-icon icon="streamline-cyber:design-mug" class="text-blue-950 text-xl bg-blue-200 rounded-2xl w-fit p-4"></iconify-icon>
         </div>
         <h1 class="text-lg text-center font-semibold leading-none uppercase pb-8">
 
@@ -178,9 +179,8 @@
         </h1>
       </a>
     </div>
-  </section>
-  
-  <section class="collaborations mt-6 lg:mt-24 flex flex-col">
+  </section>  
+  <section class="collaborations mt-32 lg:mt-52 flex flex-col">
     <h1 class="mx-3 lg:mx-56 mb-8 lg:mb-12 text-2xl lg:text-3xl font-semibold lg:font-bold text-center">I'm proud to have collaborated with some awesome companies:</h1>
     <div id="collabs" class="collaborations-grid grid grid-cols-2 lg:grid-cols-4 grid-rows-4 lg:grid-rows-2 mx-6 lg:mx-14 gap-4">
       <div class="collaborations">
@@ -209,7 +209,7 @@
       </div>
     </div>
   </section>
-  <footer class="mt-6 flex flex-col justify-center items-center bg-[#552694] w-full px-6 pt-60 pb-20">
+  <footer class="mt-6 flex flex-col justify-center items-center bg-[#267194] w-full px-6 pt-60 pb-20">
     <img class="w-32 lg:w-64 h-32 lg:h-64" src="/images/logo design/logomark_00000.png" alt="">
     <p class="text-lg lg:text-xl text-[#f2f2f2] text-center font-[poppins]">Designing with Vision, Leading with Purpose.</p>
     <div class="mt-10 socials flex gap-3 lg:gap-6">
