feat: add contact page and testimonial slider functionality
- Create new contact.html page with form submission to Google Forms
- Implement testimonial slider with navigation buttons in index.js
- Fix typo in navigation class name across multiple pages
- Update text sizes and spacing in about section for better readability

--- a/index.html
+++ b/index.html
@@ -42,27 +42,27 @@
   </section>
   <section id="about" class="about flex flex-col justify-center items-center gap-4">
     <div class="flex flex-col bg-[#267194] w-full px-6 pt-10 lg:pt-32 pb-46 lg:pb-60 gap-6">
-      <h1 class="text-lg lg:text-2xl text-[#f2f2f2] font-semibold text-center">Hi, I'm techqueen AKA John Doe. <br> Nice to meet you.</h1>
-      <p class="text-base lg:text-lg text-[#f2f2f2] text-center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui rerum, commodi facilis asperiores aperiam tempora <br class="hidden lg:flex"> tenetur beatae vitae aliquid praesentium cum! Reiciendis, excepturi.<br class="hidden lg:flex"> Distinctio culpa commodi modi officia, tempora corporis!</p>
+      <h1 class="text-lg lg:text-3xl text-[#f2f2f2] font-semibold text-center">Hi, I'm techqueen AKA John Doe. <br> Nice to meet you.</h1>
+      <p class="text-base lg:text-xl text-[#f2f2f2] text-center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui rerum, commodi facilis asperiores aperiam tempora <br class="hidden lg:flex"> tenetur beatae vitae aliquid praesentium cum! Reiciendis, excepturi.<br class="hidden lg:flex"> Distinctio culpa commodi modi officia, tempora corporis!</p>
     </div>
     <div class="cards -mt-32 grid grid-rows-2 lg:grid-rows-1 lg:grid-cols-2 px-6 lg:px-14 gap-4">
       <div class="bg-[#ffffff] flex flex-col justify-center items-center py-6 px-6 rounded-2xl shadow-2xs shadow-gray-400">
         <iconify-icon icon="streamline-cyber:design-mug" class="text-blue-950 text-5xl bg-blue-100 rounded-full p-4"></iconify-icon>
-        <h1 class="mt-6 text-xl font-bold">Designer</h1>
-        <p class="mt-8 text-lg text-center font-[poppins]">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa esse minus doloribus?</p>
-        <p class="mt-14 text-lg text-[#267194] text-center font-[poppins]">Things I enjoy designing:</p>
-        <p class="mt-2 text-lg text-center font-[poppins]">UI, Logos, Flyers, Instagram posts</p>
-        <p class="mt-14 text-lg text-[#267194] text-center font-[poppins]">Design tools:</p>
-        <p class="mt-2 text-lg text-center font-[poppins]">Figma <br>Photoshop <br>Canva <br>Pen and Paper <br>Sketch</p>
+        <h1 class="mt-6 text-xl lg:text-3xl font-bold">Designer</h1>
+        <p class="mt-8 text-lg lg:text-xl text-center font-[poppins]">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa esse minus doloribus?</p>
+        <p class="mt-14 text-lg lg:text-xl text-[#267194] text-center font-[poppins]">Things I enjoy designing:</p>
+        <p class="mt-2 text-lg lg:text-xl text-center font-[poppins]">UI, Logos, Flyers, Instagram posts</p>
+        <p class="mt-14 text-lg lg:text-xl text-[#267194] text-center font-[poppins]">Design tools:</p>
+        <p class="mt-2 text-lg lg:text-xl text-center font-[poppins]">Figma <br>Photoshop <br>Canva <br>Pen and Paper <br>Sketch</p>
       </div>
       <div class="bg-[#ffffff] flex flex-col justify-center items-center py-6 px-6 rounded-2xl shadow-2xs shadow-gray-400">
         <iconify-icon icon="mdi:briefcase-account-outline" class="text-blue-950 text-5xl bg-blue-100 rounded-full p-4"></iconify-icon>
-        <h1 class="mt-6 text-xl font-bold">Project Manager</h1>
-        <p class="mt-8 text-lg text-center font-[poppins]">Experienced in leading cross-functional teams to deliver successful projects on time and within budget.</p>
-        <p class="mt-14 text-lg text-[#267194] text-center font-[poppins]">What I manage:</p>
-        <p class="mt-2 text-lg text-center font-[poppins]">Timelines, Team Collaboration, Client Communication</p>
-        <p class="mt-14 text-lg text-[#267194] text-center font-[poppins]">Management tools:</p>
-        <p class="mt-2 text-lg text-center font-[poppins]">Trello <br>Jira <br>Asana <br>Slack <br>Notion</p>
+        <h1 class="mt-6 text-xl lg:text-3xl font-bold">Project Manager</h1>
+        <p class="mt-8 text-lg lg:text-xl text-center font-[poppins]">Experienced in leading cross-functional teams to deliver successful projects on time and within budget.</p>
+        <p class="mt-14 text-lg lg:text-xl text-[#267194] text-center font-[poppins]">What I manage:</p>
+        <p class="mt-2 text-lg lg:text-xl text-center font-[poppins]">Timelines, Team Collaboration, Client Communication</p>
+        <p class="mt-14 text-lg lg:text-xl text-[#267194] text-center font-[poppins]">Management tools:</p>
+        <p class="mt-2 text-lg lg:text-xl text-center font-[poppins]">Trello <br>Jira <br>Asana <br>Slack <br>Notion</p>
       </div>
     </div>
   </section>
@@ -209,7 +209,108 @@
       </div>
     </div>
   </section>
-  <footer class="mt-6 flex flex-col justify-center items-center bg-[#267194] w-full px-6 pt-60 pb-20">
+  <section id="contact" class="mt-10 lg:mt-24 px-2 py-12 mx-2 lg:mx-80 rounded-2xl liquid-glass shadow-xs shadow-gray-400">
+    <h1 class="mb-8 lg:mb-14 text-2xl lg:text-3xl font-semibold lg:font-bold text-center">Contact Me</h1>
+    <form 
+      action="https://docs.google.com/forms/d/e/1FAIpQLSfpV6H-I_PlaYqc-0ML3q06ASNYOjfZsdQdO-iWwLyZDAtvMw/formResponse?usp=sharing&ouid=104050802580018538662" 
+      method="POST" 
+      target="_blank"
+
+      class="flex flex-col gap-4 max-w-xl mx-auto">
+      <!-- Name -->
+      <div>
+        <label for="name" class="block text-sm font-medium text-gray-700">Name</label>
+        <input 
+          type="text" 
+          id="name" 
+          name="entry.1211441886" 
+          required 
+          class="mt-1 w-full px-4 py-2 border border-white rounded-md bg-white">
+      </div>
+
+      <!-- Email -->
+      <div>
+        <label for="email" class="block text-sm font-medium text-gray-700">Email</label>
+        <input 
+          type="email" 
+          id="email" 
+          name="entry.752932902" 
+          required 
+          class="mt-1 w-full px-4 py-2 border border-white rounded-md bg-white"
+        >
+      </div>
+
+      <!-- Project Type -->
+      <div>
+        <label for="project" class="block text-sm font-medium text-gray-700">Which project?</label>
+        <select 
+          id="project" 
+          name="entry.2117745121" 
+          required 
+          class="mt-1 w-full px-4 py-2 border border-white rounded-md bg-white"
+        >
+          <option value="">Select a project</option>
+          <option value="Graphic Design">Graphic Design</option>
+          <option value="Project Management">Project Management</option>
+        </select>
+      </div>
+
+      <!-- Additional Details -->
+      <div>
+        <label for="details" class="block text-sm font-medium text-gray-700">Additional details</label>
+        <textarea 
+          id="details" 
+          name="entry.1374084869" 
+          rows="4" 
+          class="mt-1 w-full px-4 py-2 border border-white rounded-md bg-white"
+        ></textarea>
+      </div>
+
+      <!-- Submit -->
+      <button 
+        type="submit" 
+        class="bg-blue-600 text-white px-6 py-2 rounded-md hover:bg-blue-700"
+      >
+        Submit
+      </button>
+    </form>
+  </section>
+  <section class="mt-20 lg:mt-32 testimonials flex flex-col justify-center items-center w-full">
+    <h1 class="mb-8 lg:mb-14 text-2xl lg:text-3xl font-semibold lg:font-bold text-center">Testimonials</h1>
+    <p class="font-[poppins] text-lg lg:text-xl text-center">People I've worked with have said some nice things...</p>
+    <div class="mt-14 testimonials-container mx-4 lg:mx-64 overflow-hidden relative">
+      <div id="testimonial-wrapper" class="flex transition-transform duration-300 ease-in-out w-[100%]">
+        <div class="testimonial-1 flex-shrink-0 w-full flex flex-col justify-center items-center gap-10">
+          <img class="testifier-img rounded-full w-28 h-28" src="/images/illustrations/avatar_00000.png" alt="testimonial-1">
+          <p class="testifier-comment font-[poppins] text-lg lg:text-xl text-center px-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum consequatur sequi dolorum, dolorem repudiandae amet molestiae commodi, voluptas, voluptatum quas fugiat quia. Quae, voluptas.</p>
+          <p class="-mb-8 testifier-name font-[poppins] text-lg lg:text-xl text-center font-bold px-4">John Doe</p>
+          <p class="testifier-company font-[poppins] text-lg lg:text-xl text-center px-4">Company Name</p>
+        </div>
+        <div class="testimonial-2 flex-shrink-0 w-full flex flex-col justify-center items-center gap-10">
+          <img class="testifier-img rounded-full w-28 h-28" src="/images/illustrations/avatar_00000.png" alt="testimonial-1">
+          <p class="testifier-comment font-[poppins] text-lg lg:text-xl text-center px-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum consequatur sequi dolorum, dolorem repudiandae amet molestiae commodi, voluptas, voluptatum quas fugiat quia. Quae, voluptas.</p>
+          <p class="-mb-8 testifier-name font-[poppins] text-lg lg:text-xl text-center font-bold px-4">John Doe</p>
+          <p class="testifier-company font-[poppins] text-lg lg:text-xl text-center px-4">Company Name</p>
+        </div>
+      </div>
+    </div>
+    <div class="mt-8 testimonial-btn flex flex-row gap-4">
+      <button class="testimonial-btn testimonial-1-btn w-5 h-5 bg-[#267194] rounded-full border border-white hover:bg-blue-700"></button>
+      <button class="testimonial-btn testimonial-2-btn w-5 h-5 bg-white rounded-full border border-gray-600 hover:bg-blue-700"></button>
+    </div>
+  </section>
+  <section class="collaboration mt-14 -mb-72 lg:-mb-32 mx-8 px-8 lg:px-24 py-12 bg-cyan-950 text-white flex flex-col lg:flex-row gap-4 lg:gap-14 justify-center items-center rounded-2xl relative z-10">
+    <h1 class="text-2xl lg:text-3xl font-bold lg:w-2/8">Start a project</h1>
+    <p class="font-[poppins] text-lg lg:text-xl text-center lg:text-left lg:font-semibold lg:w-4/8">Interested in working together? We should queue up a time to chat. I'll buy the coffee.</p>
+
+    <a class="lg:w-2/8 flex justify-end" href="/pages/contact.html">
+      <button class="px-6 py-3 flex flex-row justify-center items-center gap-4 border-2 border-indigo-400 hover:bg-indigo-400 text-white hover:text-cyan-950 rounded-3xl">
+        <iconify-icon icon="akar-icons:rock-on" class="text-3xl lg:text-5xl"></iconify-icon>
+        <p class="text-lg lg:text-2xl font-bold">Let's do this</p>
+      </button>
+    </a>
+  </section>
+  <footer class="mt-6 flex flex-col justify-center items-center bg-[#267194] w-full px-6 pt-60 pb-20 relative z-0">
     <img class="w-32 lg:w-64 h-32 lg:h-64" src="/images/logo design/logomark_00000.png" alt="">
     <p class="text-lg lg:text-xl text-[#f2f2f2] text-center font-[poppins]">Designing with Vision, Leading with Purpose.</p>
     <div class="mt-10 socials flex gap-3 lg:gap-6">
