--- a/pages/graphic-design.html
+++ b/pages/graphic-design.html
@@ -9,7 +9,7 @@
   <title>Techqueen Design Portfolio</title>
 </head>
 <body class="bg-[#f2f2f2] font-[rubik] pt-28 lg:pt-40">
-  <header class="navgation fixed top-4 lg:top-6 left-0 right-0 z-50 mx-20 lg:mx-64 h-14 lg:h-16 liquid-glass flex flex-row justify-center items-center rounded-4xl px-6">        
+  <header class="navigation fixed top-4 lg:top-6 left-0 right-0 z-50 mx-20 lg:mx-64 h-14 lg:h-16 liquid-glass flex flex-row justify-center items-center rounded-4xl px-6">        
       <a class="nav-link w-2/5 lg:h-12 flex lg:hidden items-center justify-center bg-[#ffffff] rounded-3xl px-2 py-2" href="../index.html">
         <div class="w-full h-8 bg-cover  lg:bg-contain bg-center bg-no-repeat" style="background-image: url('../images/logo\ design/Favicon_00000.png');"></div>
       </a> 
