style: clean up unused CSS classes and add liquid-glass text style
Remove unused color variables, utility classes and properties to reduce CSS bundle size
Add new text-liquid-glass-2 style for consistent glass effect text
Update collaboration section background to use liquid-glass-2 class

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
       <button class="testimonial-btn testimonial-2-btn w-5 h-5 bg-white rounded-full border border-gray-600 hover:bg-blue-700"></button>
     </div>
   </section>
-  <section class="collaboration mt-14 -mb-72 lg:-mb-32 mx-8 px-8 lg:px-24 py-12 bg-cyan-950 text-white flex flex-col lg:flex-row gap-4 lg:gap-14 justify-center items-center rounded-2xl relative z-10">
+  <section class="collaboration mt-14 -mb-72 lg:-mb-32 mx-8 px-8 lg:px-24 py-12 liquid-glass-2 text-white flex flex-col lg:flex-row gap-4 lg:gap-14 justify-center items-center rounded-2xl relative z-10">
     <h1 class="text-2xl lg:text-3xl font-bold lg:w-2/8">Start a project</h1>
     <p class="font-[poppins] text-lg lg:text-xl text-center lg:text-left lg:font-semibold lg:w-4/8">Interested in working together? We should queue up a time to chat. I'll buy the coffee.</p>
 
