style: update button color scheme for better visual consistency
The button colors were changed from indigo to cyan to better match the overall color theme of the website. This improves visual harmony and user experience.

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
     <p class="font-[poppins] text-lg lg:text-xl text-center lg:text-left lg:font-semibold lg:w-4/8">Interested in working together? We should queue up a time to chat. I'll buy the coffee.</p>
 
     <a class="lg:w-2/8 flex justify-end" href="/pages/contact.html">
-      <button class="px-6 py-3 flex flex-row justify-center items-center gap-4 border-2 border-indigo-400 hover:bg-indigo-400 text-white hover:text-cyan-950 rounded-3xl">
+      <button class="px-6 py-3 flex flex-row justify-center items-center gap-4 border-2 border-cyan-700 hover:bg-cyan-700 text-white hover:text-cyan-950 rounded-3xl">
         <iconify-icon icon="akar-icons:rock-on" class="text-3xl lg:text-5xl"></iconify-icon>
         <p class="text-lg lg:text-2xl font-bold">Let's do this</p>
       </button>
