style(ui): update color scheme from purple to teal blue
Consistent color scheme (#267194) applied to submit button and footers across multiple pages for better brand cohesion

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
       <!-- Submit -->
       <button 
         type="submit" 
-        class="bg-blue-600 text-white px-6 py-2 rounded-md hover:bg-blue-700"
+        class="bg-[#267194] text-white px-6 py-2 rounded-md hover:bg-blue-700"
       >
         Submit
       </button>
